Fix header username text display being cut off

--- a/src/basic.less
+++ b/src/basic.less
@@ -279,13 +279,11 @@ table {
 
 		span.text {
 			width: auto;
-			direction: rtl;
-			text-indent: -9999px;
 			display: block;
 			position: relative;
 			line-height: 30px;
 			margin-right: 160px;
-
+			color: transparent;
 
 			em {
 				position: absolute;
@@ -299,6 +297,7 @@ table {
 				background: @black;
 				padding: 0 15px 0 10px;
 				white-space: nowrap;
+				color: #fff;
 
 				&:before {
 					font-size: 1rem;
